--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -185,11 +185,11 @@
                     <div class="flex items-center justify-center gap-12 pt-4">
                         <div>
                             <img src="/static/trophy/1.png" alt="" class="w-[100px] mix-blend-screen mb-3">
-                            <p class="text-sm sm:text-lg flex flex-col items-center"><span class="font-semibold text-base text-gray-300">1st</span> ₹ 1,000</p>
+                            <p class="text-sm sm:text-lg flex flex-col items-center"><span class="font-semibold text-base text-gray-300">1st</span> ₹ {{winnerPrice1}}</p>
                         </div>
                         <div>
                             <img src="/static/trophy/2.png" alt="" class="w-[100px] mix-blend-screen mb-3">
-                            <p class="text-sm sm:text-lg flex flex-col items-center"><span class="font-semibold text-base text-gray-300">2nd</span> ₹ 750</p>
+                            <p class="text-sm sm:text-lg flex flex-col items-center"><span class="font-semibold text-base text-gray-300">2nd</span> ₹ {{winnerPrice2}}</p>
                         </div>
                     </div>
                 </div>
