--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -57,7 +57,123 @@
                     <h2 class="text-3xl font-semibold tracking-tight text-white sm:text-4xl lg:text-5xl">Frequently asked questions</h2>
                     <!-- <p class="mt-4 text-base font-normal leading-7 text-white lg:text-lg lg:mt-6 lg:leading-8">Ask everything you need to know about our products and services.</p> -->
                 </div>
+                
                 <div class="max-w-5xl mx-auto mt-12 overflow-hidden border border-gray-200 divide-y divide-gray-200 sm:mt-16 rounded-xl">
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. What is Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. Xenesis is a technical event that aims to promote innovation and creativity in the field of technology. It provides a platform for students to showcase their skills and learn from industry experts.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. Who can participate in Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. Xenesis is open to all students who are interested in technology and innovation. Students from all disciplines are welcome to participate
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. How can I register for Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. To register for Xenesis, please visit our website and click on the registration link. You will be asked to provide some basic information about yourself and your team (if applicable). Once you have completed the registration process, you will receive a confirmation email.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. What is the registration fee for Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. The registration fee for Xenesis varies depending on the event and the number of participants. Please refer to the registration page on our website for more information.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. What are the prizes for winning Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4" class=""></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. The prizes for winning Xenesis vary depending on the event. However, winners can expect to receive cash prizes, certificates, and recognition from industry experts.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <div data-aos="fade-right" class="faq">
                         <h3>
                             <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg text-base font-semibold text-left text-white sm:p-6" aria-expanded="false">
@@ -145,6 +261,28 @@
                         <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
                             <div class="px-6 pb-6">
                                 <p class="text-base text-white">A. Yes, users can register for multiple events. Users are required to make sure that the event times do not overlap.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div data-aos="fade-right" class="faq">
+                        <h3>
+                            <button onclick="faqUpdater(this)" class="flex items-center justify-between !outline-none w-full px-6 py-5 sm:text-lg font-semibold text-left text-white sm:p-6" aria-expanded="false">
+                                <span> Q. Who can I contact for more information about Xenesis? </span>
+                                <span aria-hidden="true" class="ml-4" style="display: none">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
+                                    </svg>
+                                </span>
+                                <span aria-hidden="true" class="ml-4">
+                                    <svg class="w-6 h-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                    </svg>
+                                </span>
+                            </button>
+                        </h3>
+                        <div class="overflow-hidden transition-all duration-300 scale-y-0 origin-top h-0">
+                            <div class="px-6 pb-6">
+                                <p class="text-base text-white">A. For more information about Xenesis, please contact us at "xenesis@ldrp.ac.in" or visit our website for more details.</p>
                             </div>
                         </div>
                     </div>
