--- a/templates/event.html
+++ b/templates/event.html
@@ -175,11 +175,11 @@
 								<div class="flex items-center justify-center bg-[#2F1D69] h-14 px-2 -pt-10 pb-0 rounded-b-lg relative">
 									<div class="flex flex-col items-center absolute bottom-0 z-20 -translate-x-[50%]">
 										<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">1</p>
-										<p class="bg-yellow-500 px-4 py-2 text-white font-semibold transition-all duration-300 hover:py-4">₹ 1000</p>
+										<p class="bg-yellow-500 px-4 py-2 text-white font-semibold transition-all duration-300 hover:py-4">₹{{event.9}}</p>
 									</div>
 									<div class="flex flex-col items-center absolute bottom-0 translate-x-[50%] z-10">
 										<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">2</p>
-										<p class="bg-gray-500 px-4 py-[3px] text-white font-semibold transition-all duration-300 hover:py-4">₹ 750</p>
+										<p class="bg-gray-500 px-4 py-[3px] text-white font-semibold transition-all duration-300 hover:py-4">₹{{event.10}}</p>
 									</div>
 								</div>
 							</div>
@@ -347,11 +347,11 @@
 												<div class="flex items-center justify-center bg-[#2F1D69] h-14 px-2 -pt-10 pb-0 rounded-b-lg relative">
 													<div class="flex flex-col items-center absolute bottom-0 z-20 -translate-x-[50%]">
 														<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">1</p>
-														<p class="bg-yellow-500 px-4 py-2 text-white font-semibold transition-all duration-300 hover:py-4">₹ 1000</p>
+														<p class="bg-yellow-500 px-4 py-2 text-white font-semibold transition-all duration-300 hover:py-4">₹{{event.9}}</p>
 													</div>
 													<div class="flex flex-col items-center absolute bottom-0 translate-x-[50%] z-10">
 														<p class="text-[#2F1D69] font-semibold bg-white rounded-full h-5 w-5 flex items-center justify-center mb-1 font-bold">2</p>
-														<p class="bg-gray-500 px-4 py-[3px] text-white font-semibold transition-all duration-300 hover:py-4">₹ 750</p>
+														<p class="bg-gray-500 px-4 py-[3px] text-white font-semibold transition-all duration-300 hover:py-4">₹{{event.10}}</p>
 													</div>
 												</div>
 											</div>
