--- a/templates/event-confirmation.html
+++ b/templates/event-confirmation.html
@@ -130,7 +130,7 @@
 
         <!-- Hero Section -->
         <div class="w-full flex items-center justify-center relative sm:px-16 px-10">
-            <h1 class="lg:text-[5vw] pt-24 sm:text-[3.2rem] text-[3rem] md:leading-loose leading-snug z-30 font-extrabold text-blue-500 text-center hero-h1">X-Motion Game Mania</h1>
+            <h1 class="lg:text-[5vw] pt-24 sm:text-[3.2rem] text-[3rem] md:leading-loose leading-snug z-30 font-extrabold text-blue-500 text-center hero-h1">{{event}}</h1>
         </div>
         
         <!-- Participants -->
