--- a/templates/admintable.html
+++ b/templates/admintable.html
@@ -309,7 +309,7 @@
                     var tableSelect = document.getElementById('table');
                     var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
                     // Specify file name
-                    filename = filename?filename+'.xlsx':'excel_data.xlsx';
+                    filename = filename?filename+'.xls':'excel_data.xls';
                     
                     // Create download link element
                     downloadLink = document.createElement("a");
