--- a/templates/event-details.html
+++ b/templates/event-details.html
@@ -149,10 +149,15 @@
         <div class="w-full h-full relative flex items-center justify-center overflow-y-hidden">
             <div class="absolute w-full h-full bg-gradient-to-t from-[#230e3d] via-transparent to-transparent z-10"> </div>
             <div class="flex relative overflow-hidden">
-                <img src="/static/event-images/jett.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-right mySlides fade">
-                <img src="/static/event-images/1.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
-                <img src="/static/event-images/2.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
-                <img src="/static/event-images/4.jpg" alt="" class="w-screen md:h-screen h-full object-cover object-center mySlides fade">
+                {%for img in images%}
+                {%if "mp4" not in img%}
+                <img src="{{img}}" alt="" class="w-screen md:h-screen h-full object-cover object-right mySlides fade">
+                {%else%}
+                <video class="w-screen md:h-screen h-full object-cover object-right mySlides fade" autoplay muted loop>
+                    <source src="{{img}}" type="video/mp4">
+                </video>
+                {%endif%}
+                {%endfor%}
             </div>
         </div>
 
@@ -250,7 +255,7 @@
                 <p class="font-bold text-3xl mb-2 text-blue-400">Organizers</p>
                 <div class="flex items-center justify-start gap-10 mt-10 ">
                     <div class="flex flex-col items-center justify-center">
-                        <img src="/static/event-images/jett.jpg" alt="" class="w-[200px] h-[200px] object-cover object-right rounded-full">
+                        <img src="/static/event-images/3.jpg" alt="" class="w-[200px] h-[200px] object-cover object-right rounded-full">
                         <p class="mt-3 text-center text-2xl font-bold">Parth Padhiar</p>
                     </div>
                     <div class="flex flex-col items-center justify-center">
@@ -402,15 +407,21 @@
         showSlides();
 
         function showSlides() {
-        let i;
-        let slides = document.getElementsByClassName("mySlides");
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-        slideIndex++;
-        if (slideIndex > slides.length) {slideIndex = 1}
-        slides[slideIndex-1].style.display = "block";
-        setTimeout(showSlides, 3000); // Change image every 2 seconds
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {slideIndex = 1}
+            slides[slideIndex-1].style.display = "block";
+            if(slides[slideIndex-1].tagName == "VIDEO") {
+                setTimeout(showSlides, 10000);
+            }
+            else
+            {
+                setTimeout(showSlides, 3000); // Change image every 2 seconds
+            }
         }
 
         window.addEventListener('scroll', function () {
