--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -308,7 +308,7 @@
                                                   d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
                                         </svg>
                                    </div>
-                                   <p class="mt-1 text-xs+">Customers</p>
+                                   <p class="mt-1 text-xs+">Registered Students</p>
                               </div>
                          </div>
                     </div>
