--- a/templates/register.html
+++ b/templates/register.html
@@ -25,7 +25,9 @@
 </head>
 
 <body class="bg-[#240a34] overflow-x-hidden">
-
+	<script>
+		alert("Registeration is currently closed.")
+	</script>
     <!-- Main -->
     <div class="relative flex items-center justify-center w-screen h-full min-h-[100vh] py-20 overflow-hidden">
 
